--- a/index.html
+++ b/index.html
@@ -4,13 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Web development project</title>
 </head>
 
 <body>
+    <header class="menu-bar">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-2">
+                    <img class="logo" src="img/logo.png" alt="My lending">
+                </div>
+                <div class="col-xl-8 ms-auto align-self-center">
+                    <nav>
+                        <ul class="menu d-flex justify-content-end">
+                            <li class="menu__item"><a href="#">Home</a></li>
+                            <li class="menu__item"><a href="#">About</a></li>
+                            <li class="menu__item"><a href="#">Servicing</a></li>
+                            <li class="menu__item"><a href="#">Portfolio</a></li>
+                            <li class="menu__item"><a href="#">Blog</a></li>
+                            <li class="menu__item"><a href="#">Contact us</a></li>
+                            <li class="menu__item"><i class="fa-solid fa-magnifying-glass"></i></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
