--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Web development project</title>
 </head>
@@ -32,6 +33,45 @@
             </div>
         </div>
     </header>
+    <header class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <h1 class="header__title">Web development project</h1>
+                    <p class="header__text">Very suitable to support all web development projects</p>
+                    <button class="button button_empty">Our services</button>
+                    <button class="button button_full">Hire is now</button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="about">
+        <div class="container">
+            <div class="row  justify-content-center">
+                <div class="col-xl-8">
+                    <h2 class="about__title">About Us</h2>
+                    <p class="about__text about__text-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius libero harum laborum illo nesciunt repellat, adipisci distinctio illum aspernatur a. Nihil distinctio aliquid hic!</p>
+                </div>
+            </div>
+            <div class="row justify-content-around">
+                <div class="col-xl-3">
+                    <i class="fa-solid fa-globe"></i>
+                    <h3 class="about_h3">Awesome Icons</h3>
+                    <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem expedita rem nulla odit.</p>
+                </div>
+                <div class="col-xl-3">
+                    <i class="fa-solid fa-users"></i>
+                    <h3 class="about_h3">One Page</h3>
+                    <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eaque incidunt corporis tenetur!</p>
+                </div>
+                <div class="col-xl-3">
+                    <i class="fa-solid fa-user-gear"></i>
+                    <h3 class="about_h3">Fully Responsive</h3>
+                    <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio officia perferendis.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
