раздел: наши услуги

--- a/index.html
+++ b/index.html
@@ -50,24 +50,97 @@
             <div class="row  justify-content-center">
                 <div class="col-xl-8">
                     <h2 class="about__title">About Us</h2>
-                    <p class="about__text about__text-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius libero harum laborum illo nesciunt repellat, adipisci distinctio illum aspernatur a. Nihil distinctio aliquid hic!</p>
+                    <p class="about__text about__text-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Eius libero harum laborum illo nesciunt repellat, adipisci distinctio illum aspernatur a. Nihil
+                        distinctio aliquid hic!</p>
                 </div>
             </div>
             <div class="row justify-content-around">
                 <div class="col-xl-3">
                     <i class="fa-solid fa-globe"></i>
                     <h3 class="about_h3">Awesome Icons</h3>
-                    <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem expedita rem nulla odit.</p>
+                    <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem
+                        expedita rem nulla odit.</p>
                 </div>
                 <div class="col-xl-3">
                     <i class="fa-solid fa-users"></i>
                     <h3 class="about_h3">One Page</h3>
-                    <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eaque incidunt corporis tenetur!</p>
+                    <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eaque
+                        incidunt corporis tenetur!</p>
                 </div>
                 <div class="col-xl-3">
                     <i class="fa-solid fa-user-gear"></i>
                     <h3 class="about_h3">Fully Responsive</h3>
-                    <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio officia perferendis.</p>
+                    <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio
+                        officia perferendis.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="services">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-8">
+                    <h2 class="about__title">Our Services</h2>
+                    <p class="about__text about__text-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Eius libero harum laborum illo nesciunt repellat, adipisci distinctio illum aspernatur a. Nihil
+                        distinctio aliquid hic!</p>
+                </div>
+            </div>
+            <div class="row justify-content-cente">
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fa-solid fa-mobile-screen-button icon"></i>
+                        <h3 class="about_h3">Fully Responsive</h3>
+                        <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio
+                            officia perferendis.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fa-solid fa-mobile-screen-button icon"></i>
+                        <h3 class="about_h3">Portfolio</h3>
+                        <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio
+                            officia perferendis.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fa-solid fa-mobile-screen-button icon"></i>
+                        <h3 class="about_h3">Support</h3>
+                        <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio
+                            officia perferendis.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fa-solid fa-mobile-screen-button icon"></i>
+                        <h3 class="about_h3">Documentation</h3>
+                        <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio
+                            officia perferendis.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fa-solid fa-mobile-screen-button icon"></i>
+                        <h3 class="about_h3">Development</h3>
+                        <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio
+                            officia perferendis.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="our_card">
+                        <i class="fa-solid fa-mobile-screen-button icon"></i>
+                        <h3 class="about_h3">Design</h3>
+                        <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio
+                            officia perferendis.</p>
+                        <button class="button-services">Read more</button>
+                    </div>
                 </div>
             </div>
         </div>
