раздел: работы + скрипт филтрация

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <div class="col-xl-12">
                     <h1 class="header__title">Web development project</h1>
                     <p class="header__text">Very suitable to support all web development projects</p>
-                    <button class="button button_empty">Our services</button>
-                    <button class="button button_full">Hire is now</button>
+                    <button class="button">Our services</button>
+                    <button class="button">Hire is now</button>
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
             <div class="row justify-content-cente">
                 <div class="col-xl-4">
                     <div class="our_card">
-                        <i class="fa-solid fa-mobile-screen-button icon"></i>
+                        <i class="fa-brands fa-searchengin icon"></i>
                         <h3 class="about_h3">Fully Responsive</h3>
                         <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio
                             officia perferendis.</p>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="col-xl-4">
                     <div class="our_card">
-                        <i class="fa-solid fa-mobile-screen-button icon"></i>
+                        <i class="fa-regular fa-images icon"></i>
                         <h3 class="about_h3">Portfolio</h3>
                         <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio
                             officia perferendis.</p>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="col-xl-4">
                     <div class="our_card">
-                        <i class="fa-solid fa-mobile-screen-button icon"></i>
+                        <i class="fa-solid fa-question icon"></i>
                         <h3 class="about_h3">Support</h3>
                         <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio
                             officia perferendis.</p>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="col-xl-4">
                     <div class="our_card">
-                        <i class="fa-solid fa-mobile-screen-button icon"></i>
+                        <i class="fa-solid fa-folder-open icon"></i>
                         <h3 class="about_h3">Documentation</h3>
                         <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio
                             officia perferendis.</p>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-xl-4">
                     <div class="our_card">
-                        <i class="fa-solid fa-mobile-screen-button icon"></i>
+                        <i class="fa-solid fa-code icon"></i>
                         <h3 class="about_h3">Development</h3>
                         <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio
                             officia perferendis.</p>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-xl-4">
                     <div class="our_card">
-                        <i class="fa-solid fa-mobile-screen-button icon"></i>
+                        <i class="fa-solid fa-pen-ruler icon"></i>
                         <h3 class="about_h3">Design</h3>
                         <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio
                             officia perferendis.</p>
@@ -145,6 +145,39 @@
             </div>
         </div>
     </section>
+    <section class="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="row justify-content-center">
+                    <div class="col-xl-8">
+                        <h2 class="about__title">Latest Works</h2>
+                        <p class="about__text about__text-title">Lorem, ipsum dolor sit amet consectetur adipisicing
+                            elit.
+                            Eius libero harum laborum illo nesciunt repellat, adipisci distinctio illum aspernatur a.
+                            Nihil
+                            distinctio aliquid hic!</p>
+                            <button class="button" val="on" filter="all">ALL</button>
+                            <button class="button" val="off" filter="wd">Web design</button>
+                            <button class="button" val="off" filter="ud">UI/UX design</button>
+                            <button class="button" val="off" filter="moc">Mockups</button>
+                    </div>
+                </div>
+                <div class="row filter">
+                    <div filter="wd" class="col-xl-4"><img src="img/item1.png" alt=""></div>
+                    <div filter="wd" class="col-xl-4"><img src="img/item2.png" alt=""></div>
+                    <div filter="moc" class="col-xl-4"><img src="img/item3.png" alt=""></div>
+                    <div filter="ud" class="col-xl-4"><img src="img/item4.png" alt=""></div>
+                    <div filter="ud" class="col-xl-4"><img src="img/item5.png" alt=""></div>
+                    <div filter="moc" class="col-xl-4"><img src="img/item6.png" alt=""></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-12">
+                    <button class="button">View all</button>
+                </div>
+            </div>
+    </section>
+    <script src="js/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
@@ -152,6 +185,7 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d37cc235c8.js" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
