--- a/index.html
+++ b/index.html
@@ -156,24 +156,60 @@
                             Eius libero harum laborum illo nesciunt repellat, adipisci distinctio illum aspernatur a.
                             Nihil
                             distinctio aliquid hic!</p>
-                            <button class="button" val="on" filter="all">ALL</button>
-                            <button class="button" val="off" filter="wd">Web design</button>
-                            <button class="button" val="off" filter="ud">UI/UX design</button>
-                            <button class="button" val="off" filter="moc">Mockups</button>
+                        <button class="button" val="on" filter="all">ALL</button>
+                        <button class="button" val="off" filter="wd">Web design</button>
+                        <button class="button" val="off" filter="ud">UI/UX design</button>
+                        <button class="button" val="off" filter="moc">Mockups</button>
                     </div>
                 </div>
                 <div class="row filter">
-                    <div filter="wd" class="col-xl-4"><img src="img/item1.png" alt=""></div>
-                    <div filter="wd" class="col-xl-4"><img src="img/item2.png" alt=""></div>
-                    <div filter="moc" class="col-xl-4"><img src="img/item3.png" alt=""></div>
-                    <div filter="ud" class="col-xl-4"><img src="img/item4.png" alt=""></div>
-                    <div filter="ud" class="col-xl-4"><img src="img/item5.png" alt=""></div>
-                    <div filter="moc" class="col-xl-4"><img src="img/item6.png" alt=""></div>
+                    <div filter="wd" class="col-xl-4">
+                        <img src="img/item1.png" alt="">
+                        <div class="text">
+                            <h5>Hand Watch</h5>
+                            <p>Web design</p>
+                        </div>
+                    </div>
+                    <div filter="wd" class="col-xl-4">
+                        <img src="img/item2.png" alt="">
+                        <div class="text">
+                            <h5>One Day Pass</h5>
+                            <p>Web design</p>
+                        </div>
+                    </div>
+                    <div filter="moc" class="col-xl-4">
+                        <img src="img/item3.png" alt="">
+                        <div class="text">
+                            <h5>Modal T-shirt</h5>
+                            <p>Mockups</p>
+                        </div>
+                    </div>
+                    <div filter="ud" class="col-xl-4">
+                        <img src="img/item4.png" alt="">
+                        <div class="text">
+                            <h5>Flask</h5>
+                            <p>UI/UX design</p>
+                        </div>
+                    </div>
+                    <div filter="ud" class="col-xl-4">
+                        <img src="img/item5.png" alt="">
+                        <div class="text">
+                            <h5>Eplemost</h5>
+                            <p>UI/UX design</p>
+                        </div>
+                    </div>
+                    <div filter="moc" class="col-xl-4">
+                        <img src="img/item6.png" alt="">
+                        <div class="text">
+                            <h5>The Kitchens</h5>
+                            <p>Mockups</p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xl-12">
-                    <button class="button">View all</button>
+                    <button class="button" val="on" filter="all">View all</button>
                 </div>
             </div>
     </section>
