--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="css/style.css">
     <title>Web development project</title>
 </head>
@@ -284,6 +285,299 @@
             </div>
         </div>
     </section>
+    <section class="team">
+        <div class="container">
+            <div class="row  justify-content-center">
+                <div class="col-xl-8">
+                    <h2 class="about__title">Our Team Member</h2>
+                    <p class="about__text about__text-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Eius libero harum laborum illo nesciunt repellat, adipisci distinctio illum aspernatur a. Nihil
+                        distinctio aliquid hic!</p>
+                </div>
+            </div>
+            <div class="row multiple-items justify-content-center">
+                <div class="col-xl-4">
+                    <img src="img/team1.png" alt="">
+                    <h4>John Doe</h4>
+                    <p>General Manager</p>
+                    <div class="icons">
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-vk fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-telegram fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-whatsapp fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-discord fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <img src="img/team2.png" alt="">
+                    <h4>Alexa Biru</h4>
+                    <p>Office Director</p>
+                    <div class="icons">
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-vk fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-telegram fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-whatsapp fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-discord fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <img src="img/team3.png" alt="">
+                    <h4>Ronobir sing</h4>
+                    <p>Admin</p>
+                    <div class="icons">
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-vk fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-telegram fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-whatsapp fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-discord fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <img src="img/team1.png" alt="">
+                    <h4>John Doe</h4>
+                    <p>General Manager</p>
+                    <div class="icons">
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-vk fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-telegram fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-whatsapp fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-discord fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <img src="img/team2.png" alt="">
+                    <h4>Alexa Biru</h4>
+                    <p>Office Director</p>
+                    <div class="icons">
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-vk fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-telegram fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-whatsapp fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-discord fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <img src="img/team3.png" alt="">
+                    <h4>Ronobir sing</h4>
+                    <p>Admin</p>
+                    <div class="icons">
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-vk fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-telegram fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-whatsapp fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-discord fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <img src="img/team1.png" alt="">
+                    <h4>John Doe</h4>
+                    <p>General Manager</p>
+                    <div class="icons">
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-vk fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-telegram fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-whatsapp fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-discord fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <img src="img/team2.png" alt="">
+                    <h4>Alexa Biru</h4>
+                    <p>Office Director</p>
+                    <div class="icons">
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-vk fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-telegram fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-whatsapp fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-discord fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <img src="img/team3.png" alt="">
+                    <h4>Ronobir sing</h4>
+                    <p>Admin</p>
+                    <div class="icons">
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-vk fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-telegram fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-whatsapp fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="">
+                            <span class="fa-stack fa-2x">
+                                <i class="fa-solid fa-square fa-stack-2x"></i>
+                                <i class="fa-brands fa-discord fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -292,6 +586,7 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d37cc235c8.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
