--- a/index.html
+++ b/index.html
@@ -578,6 +578,118 @@
             </div>
         </div>
     </section>
+    <section class="services">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-8">
+                    <h2 class="about__title">Blog</h2>
+                    <p class="about__text about__text-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Eius libero harum laborum illo nesciunt repellat, adipisci distinctio illum aspernatur a. Nihil
+                        distinctio aliquid hic!</p>
+                </div>
+            </div>
+            <div class="row left">
+                <div class="col-xl-6">
+                    <img src="img/blog1.png" alt="">
+                </div>
+                <div class="row align-self-start col-xl-6">
+                    <div class="blog">
+                        <a href="">SEO Quis Vestibulum</a>
+                        <div>
+                            <span><i class="fa-regular fa-calendar-days"></i>14.0702017</span>
+                            <span><i class="fa-regular fa-file"></i>Development</span>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis inventore, perspiciatis
+                            vitae
+                            fugit consequuntur delectus facilis? Consequuntur quisquam iusto repellat.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row right">
+                <div class="col-xl-6">
+                    <img src="img/blog2.png" alt="">
+                </div>
+                <div class="row align-self-start col-xl-6">
+                    <div class="blog">
+                        <a href="">SEO Quis Vestibulum</a>
+                        <div>
+                            <span><i class="fa-regular fa-calendar-days"></i>14.0702017</span>
+                            <span><i class="fa-regular fa-file"></i>Development</span>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis inventore, perspiciatis
+                            vitae
+                            fugit consequuntur delectus facilis? Consequuntur quisquam iusto repellat.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row left">
+                <div class="col-xl-6">
+                    <img src="img/blog3.png" alt="">
+                </div>
+                <div class="row align-self-start col-xl-6">
+                    <div class="blog">
+                        <a href="">SEO Quis Vestibulum</a>
+                        <div>
+                            <span><i class="fa-regular fa-calendar-days"></i>14.0702017</span>
+                            <span><i class="fa-regular fa-file"></i>Development</span>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis inventore, perspiciatis
+                            vitae
+                            fugit consequuntur delectus facilis? Consequuntur quisquam iusto repellat.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-12">
+                    <button class="button_blog">More Viev</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-8">
+                    <h2 class="about__title">Contact Us</h2>
+                    <p class="about__text about__text-title">Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                        Eius libero harum laborum illo nesciunt repellat, adipisci distinctio illum aspernatur a.
+                        Nihil
+                        distinctio aliquid hic!</p>
+                </div>
+            </div>
+            <div class="row justify-content-around">
+                <div class="col-xl-3">
+                    <div class="circle">
+                        <i class="fa-solid fa-location-dot"></i>
+                    </div>
+                    <p>Nobinagar savar,Dhaka<br> Bangladesh</p>
+                </div>
+                <div class="col-xl-3">
+                    <div class="circle">
+                        <i class="fa-solid fa-phone"></i>
+                    </div>
+                    <p>+8801743331996 <br>+8801928737807</p>
+                </div>
+                <div class="col-xl-3">
+                    <div class="circle">
+                        <i class="fa-solid fa-envelope"></i>
+                    </div>
+                    <p>quickmasud@gmail.com <br> quickmasud@yahoo.com</p>
+                </div>
+                <div class="row form justify-content-center">
+                    <div class="col-xl-5"><input type="text" placeholder="Your Name"></div>
+                    <div class="col-xl-5"><input type="email" placeholder="Your Email"></div>
+                    <div class="col-xl-10"><textarea name="" id="" cols="30" rows="10" placeholder="Write Message"></textarea></div>
+                    <div class="col-xl-2 offset-xl-7"><button>Send</button></div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <footer class="rules">
+        All rights Reserved © 2017
+    </footer>
+
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
