адаптация на планшет, скрипты для якоря и меню

--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
 </head>
 
 <body>
+    <div id="toTop"><i class="fa-solid fa-arrow-up"></i></div>
     <header class="menu-bar">
         <div class="container">
             <div class="row">
-                <div class="col-xl-2">
+                <div class="col-xl-2 logo-bar">
                     <img class="logo" src="img/logo.png" alt="My lending">
+                    <button class="menu-icon"><i class="fa-solid fa-bars"></i></button>
                 </div>
                 <div class="col-xl-8 ms-auto align-self-center">
                     <nav>
                         <ul class="menu d-flex justify-content-end">
                             <li class="menu__item"><a href="#">Home</a></li>
-                            <li class="menu__item"><a href="#">About</a></li>
-                            <li class="menu__item"><a href="#">Servicing</a></li>
-                            <li class="menu__item"><a href="#">Portfolio</a></li>
-                            <li class="menu__item"><a href="#">Blog</a></li>
-                            <li class="menu__item"><a href="#">Contact us</a></li>
+                            <li class="menu__item"><a href="#about">About</a></li>
+                            <li class="menu__item"><a href="#service">Servicing</a></li>
+                            <li class="menu__item"><a href="#portfolio">Portfolio</a></li>
+                            <li class="menu__item"><a href="#blog">Blog</a></li>
+                            <li class="menu__item"><a href="#contact">Contact us</a></li>
                             <li class="menu__item"><i class="fa-solid fa-magnifying-glass"></i></li>
                         </ul>
                     </nav>
@@ -46,7 +48,7 @@
             </div>
         </div>
     </header>
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             <div class="row  justify-content-center">
                 <div class="col-xl-8">
@@ -57,19 +59,19 @@
                 </div>
             </div>
             <div class="row justify-content-around">
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-6">
                     <i class="fa-solid fa-globe"></i>
                     <h3 class="about_h3">Awesome Icons</h3>
                     <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem
                         expedita rem nulla odit.</p>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-6">
                     <i class="fa-solid fa-users"></i>
                     <h3 class="about_h3">One Page</h3>
                     <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eaque
                         incidunt corporis tenetur!</p>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-md-6">
                     <i class="fa-solid fa-user-gear"></i>
                     <h3 class="about_h3">Fully Responsive</h3>
                     <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe odio
@@ -78,7 +80,7 @@
             </div>
         </div>
     </section>
-    <section class="services">
+    <section class="services" id="service">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-8">
@@ -89,7 +91,7 @@
                 </div>
             </div>
             <div class="row justify-content-cente">
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="our_card">
                         <i class="fa-brands fa-searchengin icon"></i>
                         <h3 class="about_h3">Fully Responsive</h3>
@@ -98,7 +100,7 @@
                         <button class="button-services">Read more</button>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="our_card">
                         <i class="fa-regular fa-images icon"></i>
                         <h3 class="about_h3">Portfolio</h3>
@@ -107,7 +109,7 @@
                         <button class="button-services">Read more</button>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="our_card">
                         <i class="fa-solid fa-question icon"></i>
                         <h3 class="about_h3">Support</h3>
@@ -116,7 +118,7 @@
                         <button class="button-services">Read more</button>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="our_card">
                         <i class="fa-solid fa-folder-open icon"></i>
                         <h3 class="about_h3">Documentation</h3>
@@ -125,7 +127,7 @@
                         <button class="button-services">Read more</button>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="our_card">
                         <i class="fa-solid fa-code icon"></i>
                         <h3 class="about_h3">Development</h3>
@@ -134,7 +136,7 @@
                         <button class="button-services">Read more</button>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="our_card">
                         <i class="fa-solid fa-pen-ruler icon"></i>
                         <h3 class="about_h3">Design</h3>
@@ -146,7 +148,7 @@
             </div>
         </div>
     </section>
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="row justify-content-center">
@@ -164,42 +166,42 @@
                     </div>
                 </div>
                 <div class="row filter">
-                    <div filter="wd" class="col-xl-4">
+                    <div filter="wd" class="col-xl-4 col-md-6">
                         <img src="img/item1.png" alt="">
                         <div class="text">
                             <h5>Hand Watch</h5>
                             <p>Web design</p>
                         </div>
                     </div>
-                    <div filter="wd" class="col-xl-4">
+                    <div filter="wd" class="col-xl-4 col-md-6">
                         <img src="img/item2.png" alt="">
                         <div class="text">
                             <h5>One Day Pass</h5>
                             <p>Web design</p>
                         </div>
                     </div>
-                    <div filter="moc" class="col-xl-4">
+                    <div filter="moc" class="col-xl-4 col-md-6">
                         <img src="img/item3.png" alt="">
                         <div class="text">
                             <h5>Modal T-shirt</h5>
                             <p>Mockups</p>
                         </div>
                     </div>
-                    <div filter="ud" class="col-xl-4">
+                    <div filter="ud" class="col-xl-4 col-md-6">
                         <img src="img/item4.png" alt="">
                         <div class="text">
                             <h5>Flask</h5>
                             <p>UI/UX design</p>
                         </div>
                     </div>
-                    <div filter="ud" class="col-xl-4">
+                    <div filter="ud" class="col-xl-4 col-md-6">
                         <img src="img/item5.png" alt="">
                         <div class="text">
                             <h5>Eplemost</h5>
                             <p>UI/UX design</p>
                         </div>
                     </div>
-                    <div filter="moc" class="col-xl-4">
+                    <div filter="moc" class="col-xl-4 col-md-6">
                         <img src="img/item6.png" alt="">
                         <div class="text">
                             <h5>The Kitchens</h5>
@@ -225,7 +227,7 @@
                 </div>
             </div>
             <div class="row justify-content-around">
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="price">
                         <div class="price__head">
                             <p>Free Trail</p>
@@ -244,7 +246,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="price">
                         <div class="price__head">
                             <p>Basic</p>
@@ -263,7 +265,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-md-6">
                     <div class="price">
                         <div class="price__head">
                             <p>Ultimates</p>
@@ -578,7 +580,7 @@
             </div>
         </div>
     </section>
-    <section class="services">
+    <section class="services" id="blog">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-8">
@@ -646,7 +648,7 @@
             </div>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer" id="contact">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-8">
